NEW183752
The layout test fast/canvas/canvas-blending-global-alpha.html is failing when the WebContent process does not have WindowServer access.
https://bugs.webkit.org/show_bug.cgi?id=183752
Summary The layout test fast/canvas/canvas-blending-global-alpha.html is failing when...
Per Arne Vollan
Reported 2018-03-19 14:42:55 PDT
@@ -44,13 +44,13 @@ Testing blend mode color-dodge PASS actualColor(0, 0)[0] is within 5 of 141.6 PASS actualColor(0, 0)[1] is within 5 of 255 -PASS actualColor(0, 0)[2] is within 5 of 141.6 +FAIL actualColor(0, 0)[2] should be within 5 of 141.6. Was 135. PASS actualColor(0, 0)[3] is within 5 of 255 Testing blend mode color-burn PASS actualColor(0, 0)[0] is within 5 of 129 PASS actualColor(0, 0)[1] is within 5 of 255 -PASS actualColor(0, 0)[2] is within 5 of 116.69302325581394 +FAIL actualColor(0, 0)[2] should be within 5 of 116.69302325581394. Was 123. PASS actualColor(0, 0)[3] is within 5 of 255 Testing blend mode hard-light @@ -112,13 +112,13 @@ Testing blend mode color-dodge PASS actualColor(0, 0)[0] is within 5 of 141.6 PASS actualColor(0, 0)[1] is within 5 of 255 -PASS actualColor(0, 0)[2] is within 5 of 141.6 +FAIL actualColor(0, 0)[2] should be within 5 of 141.6. Was 135. PASS actualColor(0, 0)[3] is within 5 of 255 Testing blend mode color-burn PASS actualColor(0, 0)[0] is within 5 of 129 PASS actualColor(0, 0)[1] is within 5 of 255 -PASS actualColor(0, 0)[2] is within 5 of 116.69302325581394 +FAIL actualColor(0, 0)[2] should be within 5 of 116.69302325581394. Was 123. PASS actualColor(0, 0)[3] is within 5 of 255 Testing blend mode hard-light
Attachments
Patch (9.52 KB, patch)
2018-04-03 11:25 PDT, Per Arne Vollan
no flags
Archive of layout-test-results from ews121 for ios-simulator-wk2 (2.22 MB, application/zip)
2018-04-03 12:52 PDT, EWS Watchlist
no flags
Archive of layout-test-results from ews104 for mac-sierra-wk2 (2.86 MB, application/zip)
2018-04-03 13:06 PDT, EWS Watchlist
no flags
Patch (9.52 KB, patch)
2018-04-03 16:36 PDT, Per Arne Vollan
no flags
Patch (4.65 KB, patch)
2018-04-04 12:16 PDT, Per Arne Vollan
bfulgham: review+
Patch (4.64 KB, patch)
2018-04-04 13:37 PDT, Per Arne Vollan
commit-queue: commit-queue-
Patch (4.70 KB, patch)
2018-04-04 13:59 PDT, Per Arne Vollan
no flags
Radar WebKit Bug Importer
Comment 1 2018-03-19 14:43:42 PDT
Per Arne Vollan
Comment 2 2018-03-21 10:56:53 PDT
This is the complete set of layout test regressions when blocking WindowServer access: fast/canvas/canvas-blending-global-alpha.html fast/canvas/canvas-scale-shadowBlur.html inspector/canvas/recording-webgl-snapshots.html webgl/1.0.2/conformance/uniforms/uniform-default-values.htm webgl/webgl-texture-image-buffer-reuse.html
Per Arne Vollan
Comment 3 2018-03-21 11:01:10 PDT
I forgot one timeout: fast/canvas/webgl/read-pixels-test.html
Per Arne Vollan
Comment 4 2018-04-03 11:25:48 PDT
EWS Watchlist
Comment 5 2018-04-03 12:52:16 PDT
Comment on attachment 337097 [details] Patch Attachment 337097 [details] did not pass ios-sim-ews (ios-simulator-wk2): Output: http://webkit-queues.webkit.org/results/7195412 New failing tests: http/tests/websocket/tests/hybi/no-subprotocol.html
EWS Watchlist
Comment 6 2018-04-03 12:52:17 PDT
Created attachment 337102 [details] Archive of layout-test-results from ews121 for ios-simulator-wk2 The attached test failures were seen while running run-webkit-tests on the ios-sim-ews. Bot: ews121 Port: ios-simulator-wk2 Platform: Mac OS X 10.12.6
EWS Watchlist
Comment 7 2018-04-03 13:06:34 PDT
Comment on attachment 337097 [details] Patch Attachment 337097 [details] did not pass mac-wk2-ews (mac-wk2): Output: http://webkit-queues.webkit.org/results/7195764 New failing tests: sputnik/Conformance/07_Lexical_Conventions/7.8_Literals/7.8.5_Regular_Expression_Literals/S7.8.5_A1.1_T2.html
EWS Watchlist
Comment 8 2018-04-03 13:06:35 PDT
Created attachment 337106 [details] Archive of layout-test-results from ews104 for mac-sierra-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews104 Port: mac-sierra-wk2 Platform: Mac OS X 10.12.6
Per Arne Vollan
Comment 9 2018-04-03 16:36:50 PDT
Per Arne Vollan
Comment 10 2018-04-04 12:16:01 PDT
Brent Fulgham
Comment 11 2018-04-04 12:36:30 PDT
Comment on attachment 337201 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=337201&action=review r=me if this is working as I suggested in my comments. > Source/WebCore/platform/graphics/cocoa/GraphicsContext3DCocoa.mm:801 > + return m_displayMask.value(); Is this value already getting set on the WebProcess through a message pass from the UIProcess? I think that was part of your OpenGL fix, right? > Source/WebCore/platform/graphics/cocoa/IOSurface.mm:304 > + uint32_t mask = GraphicsContext3D::getOpenGLDisplayMask(); if (uint32_t mask = GraphicsContext3D::getOpenGLDisplayMask()) CGIOSurfaceContextSetDisplayMask(m_cgContext.get(), mask);
Per Arne Vollan
Comment 12 2018-04-04 13:32:35 PDT
(In reply to Brent Fulgham from comment #11) > Comment on attachment 337201 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=337201&action=review > > r=me if this is working as I suggested in my comments. > > > Source/WebCore/platform/graphics/cocoa/GraphicsContext3DCocoa.mm:801 > > + return m_displayMask.value(); > > Is this value already getting set on the WebProcess through a message pass > from the UIProcess? I think that was part of your OpenGL fix, right? > Yes. > > Source/WebCore/platform/graphics/cocoa/IOSurface.mm:304 > > + uint32_t mask = GraphicsContext3D::getOpenGLDisplayMask(); > > if (uint32_t mask = GraphicsContext3D::getOpenGLDisplayMask()) > CGIOSurfaceContextSetDisplayMask(m_cgContext.get(), mask); Thanks for reviewing! I will update the patch before landing.
Per Arne Vollan
Comment 13 2018-04-04 13:37:54 PDT
WebKit Commit Bot
Comment 14 2018-04-04 13:52:26 PDT
Comment on attachment 337218 [details] Patch Rejecting attachment 337218 [details] from commit-queue. Failed to run "['/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch', '--status-host=webkit-queues.webkit.org', '--bot-id=webkit-cq-03', 'validate-changelog', '--check-oops', '--non-interactive', 337218, '--port=mac']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit ChangeLog entry in Source/WebCore/PAL/ChangeLog contains OOPS!. Full output: http://webkit-queues.webkit.org/results/7208038
Per Arne Vollan
Comment 15 2018-04-04 13:59:44 PDT
WebKit Commit Bot
Comment 16 2018-04-04 14:52:07 PDT
Comment on attachment 337223 [details] Patch Clearing flags on attachment: 337223 Committed r230278: <https://trac.webkit.org/changeset/230278>
Note You need to log in before you can comment on or make changes to this bug.