The layout test fast/canvas/canvas-blending-global-alpha.html is failing when the WebContent process does not have WindowServer access. https://bugs.webkit.org/show_bug.cgi?id=183752 Source/WebCore:

<rdar://problem/38635731>

The test is failing because the system is only providing software rendering when there is no access
to the WindowServer, and software rendering is producing slightly different results than hardware
rendering. To enable accelerated rendering, the GPU to be used for IOSurface rendering needs to be
selected by handing over the OpenGL display mask to the IOSurface CGContext.

Reviewed by Brent Fulgham.

No new tests, covered by existing tests.

* platform/graphics/GraphicsContext3D.h:
* platform/graphics/cocoa/GraphicsContext3DCocoa.mm:
(WebCore::GraphicsContext3D::getOpenGLDisplayMask):
* platform/graphics/cocoa/IOSurface.mm:
(WebCore::IOSurface::ensurePlatformContext):

Source/WebCore/PAL:

Reviewed by Brent Fulgham.

* pal/spi/cg/CoreGraphicsSPI.h:


Canonical link: https://commits.webkit.org/199866@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@230278 268f45cc-cd09-0410-ab3c-d52691b4dbfc