Source/WebCore/platform/graphics/GraphicsContext3D.h
@@ -1284,6 +1284,7 @@ public:
 
 #if PLATFORM(MAC) && ENABLE(WEBPROCESS_WINDOWSERVER_BLOCKING)
     WEBCORE_EXPORT static void setOpenGLDisplayMask(CGOpenGLDisplayMask);
+    WEBCORE_EXPORT static CGOpenGLDisplayMask getOpenGLDisplayMask();
 #endif
 
 private:
